home page overflow fixed

--- a/portfolio-tracker-frontend/src/app/Pages/home/home.component.css
+++ b/portfolio-tracker-frontend/src/app/Pages/home/home.component.css
@@ -57,9 +57,8 @@
 
 /* General Styles */
 .home-container {
-  font-family: 'Poppins', sans-serif;
-  margin-top: 20px;
-  padding-top: 20px;
+  font-family: 'Poppins', sans-serif; 
+  padding-top: 40px;
   overflow-x: hidden;
 }
 
