--- a/portfolio-tracker-frontend/src/app/Pages/login/login.component.css
+++ b/portfolio-tracker-frontend/src/app/Pages/login/login.component.css
@@ -12,7 +12,7 @@ body {
 .login-card {
   background: #ffffff;
   border-radius: 15px;
-  max-width: 400px;
+  max-width: 450px;
   width: 100%;
 }
 
